@@ -7,6 +7,7 @@ Version vNext
 + #281 (LightBDD.Core)(Change) Exposed IScenario.Fixture property allowing scenario decorators accessing the fixture object
 + #281 (LightBDD.Core)(New) Added ability to register global set up and tear down for resources and activities by using `ExecutionExtensionsConfiguration`
 + #282 (LightBDD.Framework)(Change) Updated Html Report to have collapsible sub-steps being collapsed by default
++ #288 (LightBDD.Core)(Change) Format of non-inline step parameters with <$name> parameter reference
 
 Version 3.6.1
 ----------------------------------------
